# jirun

./: .gitignore  .jirar.toml.template  .jirun.toml  .jist.toml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build-binaries.yml  ci.yml  crates_io_publish.yml  release-please.yml
jirun/: Cargo.toml  README.md
jirun-tool/: Cargo.toml
jirun-tool/src/: commands.rs  config.rs  env.rs  jira.rs  lib.rs  task_context.rs  utils.rs
jirun-tool/src/common/: mock_api.rs  test_helper.rs
jirun-tool/src/jira/: real_api.rs
jirun/scripts/: install-jirun.ps1  install-jirun.sh
jirun/src/: lib.rs  main.rs
jirun/tests/: cli_test.rs
src/: commands.rs  config.rs  jira.rs  lib.rs  main.rs  task_context.rs  test_support.rs  utils.rs
src/common/: mock_api.rs  test_helper.rs
src/jira/: api.rs  real_api.rs
tests/: cli.rs  cli_test.rs  config_test.rs  helpers.rs  jira_test.rs  logic_test.rs
tests/common/: mock_api.rs  mod.rs  test_helper.rs
