[package]
name = "jirun"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.36", features = ["derive"] }
reqwest = { version = "0.12.15", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.20"
