[package]
name = "jirun"
version = "0.7.0"
edition = "2021"
description = "A Cli Generating JIRA sub-tasks from a template with a specified parent"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5.36", features = ["derive"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.20"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.19.1"

[lib]
name = "jirun"
path = "src/lib.rs"
