[package]
name = "jirun-tool"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.20"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "blocking", "rustls-tls"] }
dirs = "6.0.0"
dotenvy = "0.15.7"
clap = { version = "4.5.36", features = ["derive"] }
